@@ -3,6 +3,7 @@ substr_compare()
 --FILE--
 <?php
 
+var_dump(substr_compare("abcde", "df", -2));
 var_dump(substr_compare("abcde", "bc", 1, 2));
 var_dump(substr_compare("abcde", "bcg", 1, 2));
 var_dump(substr_compare("abcde", "BC", 1, 2, true));
@@ -20,6 +21,7 @@ var_dump(substr_compare("abcde", -1, 0, "str", new stdClass));
 echo "Done\n";
 ?>
 --EXPECTF--
+int(-1)
 int(0)
 int(0)
 int(0)
